First commit in github

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.jpa.show-sql = true
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 # Hibernate ddl auto (create, create-drop, validate, update), NOTE: On production should be validate
 spring.jpa.hibernate.ddl-auto = update
+
+# Server config
+server.servlet.context-path=/agenda
