--- a/pom.xml
+++ b/pom.xml
@@ -11,12 +11,35 @@
 	<groupId>com.agenda</groupId>
 	<artifactId>agenda</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>war</packaging>
 	<name>agenda</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
 		<java.version>1.8</java.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		<java.version>1.8</java.version>
+		<build.directory>src/main/angular/dist</build.directory>
+		<npm.executable>npm</npm.executable>
+		<ng.executable>ng</ng.executable>
+		<angular.content>src/main/webapp</angular.content>
 	</properties>
+		
+	<profiles>
+		<profile>
+			<id>platform-windows</id>
+			<activation>
+				<os>
+					<family>windows</family>
+				</os>
+			</activation>
+			<properties>
+				<npm.executable>npm.cmd</npm.executable>
+				<ng.executable>ng.cmd</ng.executable>
+			</properties>
+		</profile>
+	</profiles>
 
 	<dependencies>		
 		<dependency>
@@ -54,12 +77,119 @@
 	</dependencies>
 
 	<build>
+		<finalName>${project.name}</finalName>
+		
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<goals>
+							<goal>repackage</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-antrun-plugin</artifactId>
+				<version>1.7</version>
+				<executions>
+					<execution>
+						<id>delete-previous-build</id>
+						<phase>clean</phase>
+						<configuration>
+							<tasks>
+								<delete includeEmptyDirs="true">
+									<fileset dir="${angular.content}" includes="**/*" excludes="WEB-INF/*"/>
+								</delete>
+							</tasks>
+						</configuration>
+						<goals>
+							<goal>run</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>copying-build</id>
+						<phase>process-classes</phase>
+						<configuration>
+							<tasks>
+								<copy todir="${angular.content}">
+									<fileset dir="src/main/angular/dist"/>
+								</copy>
+							</tasks>
+						</configuration>
+						<goals>
+							<goal>run</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>exec-maven-plugin</artifactId>
+				<version>1.6.0</version>
+				<executions>
+					<execution>
+						<id>angular-modules-install</id>
+						<phase>generate-sources</phase>
+						<goals>
+							<goal>exec</goal>
+						</goals>
+						<configuration>
+							<workingDirectory>${basedir}/src/main/angular</workingDirectory>
+							<executable>${npm.executable}</executable>
+							<arguments>
+								<argument>install</argument>
+							</arguments>
+						</configuration>
+					</execution>
+					<execution>
+						<id>angular-modules-install-enhanced-resolve</id>
+						<phase>generate-sources</phase>
+						<goals>
+							<goal>exec</goal>
+						</goals>
+						<configuration>
+							<workingDirectory>${basedir}/src/main/angular</workingDirectory>
+							<executable>${npm.executable}</executable>
+							<arguments>
+								<argument>install</argument>
+								<argument>enhanced-resolve@3.3.0</argument>
+							</arguments>
+						</configuration>
+					</execution>
+					<execution>
+						<id>angular-build</id>
+						<phase>generate-sources</phase>
+						<goals>
+							<goal>exec</goal>
+						</goals>
+						<configuration>
+							<workingDirectory>${basedir}/src/main/angular</workingDirectory>
+							<executable>${ng.executable}</executable>
+							<arguments>
+								<argument>build</argument>
+								<argument>-prod</argument>
+								<argument>-base-href=/agenda/</argument>
+							</arguments>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-war-plugin</artifactId>
+				<configuration>
+					<failOnMissingWebXml>false</failOnMissingWebXml>
+				</configuration>
+			</plugin>
+
 		</plugins>
+
 	</build>
 
 </project>
